# data-pipeline-etl

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
.github/workflows/: ci.yml
dags/: crypto_pipeline.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: technical_indicators.sql
dbt_project/models/marts/: dim_trading_pairs.sql  fct_market_daily.sql  fct_market_daily.yml
dbt_project/models/staging/: stg_raw_ohlcv.sql  stg_raw_ohlcv.yml
dbt_project/tests/: assert_positive_volume.sql
docker/airflow/: Dockerfile  requirements.txt
docker/grafana/dashboards/: pipeline-overview.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: datasources.yml
docker/prometheus/: prometheus.yml
docker/spark/: Dockerfile  requirements.txt
docs/: ARCHITECTURE.md  DEPLOYMENT.md
migrations/: 001_create_tables.sql
public/: index.html
schemas/: ohlcv.avsc
scripts/: seed_historical.py
src/: config.py
src/ingestion/: consumer.py  producer.py  serialization.py
src/loading/: warehouse.py
src/monitoring/: health.py
src/transformation/: indicator_calculator.py  ohlcv_aggregator.py
tests/: conftest.py  test_aggregator.py  test_config.py  test_consumer.py  test_health.py  test_indicators.py  test_producer.py  test_serialization.py  test_warehouse.py
tests/integration/: test_kafka_postgres.py
